force-app/main/default/objects/Speaker_Submission__c/Speaker_Submission__c.object-meta.xml
<CustomObject>
    <label>Speaker Submission</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Submission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>