force-app/main/default/objects/Speaker_Submission__c/fields/ApprovedComments__c.field-meta.xml
<CustomField>
    <fullName>ApprovedComments__c</fullName>
    <inlineHelpText>Comments why the session was approved</inlineHelpText>
    <label>Approved Comments</label>
    <type>TextArea</type>
</CustomField>