force-app/main/default/objects/Speaker_Submission__c/fields/Audience_Level__c.field-meta.xml
<CustomField>
    <fullName>Audience_Level__c</fullName>
    <label>Audience Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>All Levels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>