force-app/main/default/objects/Speaker_Submission__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description about the session</inlineHelpText>
    <label>Description</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>