force-app/main/default/objects/Speaker_Submission__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <inlineHelpText>The name of the speaker</inlineHelpText>
    <label>Full Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>