force-app/main/default/objects/Speaker_Submission__c/fields/RejectionComments__c.field-meta.xml
<CustomField>
    <fullName>RejectionComments__c</fullName>
    <inlineHelpText>Comments why the session was rejected</inlineHelpText>
    <label>Rejection Comments</label>
    <type>TextArea</type>
</CustomField>