force-app/main/default/objects/Speaker_Submission__c/fields/Session_Category__c.field-meta.xml
<CustomField>
    <fullName>Session_Category__c</fullName>
    <label>Session Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architecture &amp; Design</fullName>
            </value>
            <value>
                <fullName>Development &amp; Coding</fullName>
            </value>
            <value>
                <fullName>Integration &amp; APIs</fullName>
            </value>
            <value>
                <fullName>AI &amp; Einstein</fullName>
            </value>
            <value>
                <fullName>Data &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>Security &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Career Development</fullName>
            </value>
            <value>
                <fullName>Leadership &amp; Management</fullName>
            </value>
            <value>
                <fullName>Women in Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>