force-app/main/default/objects/Speaker_Submission__c/fields/Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration__c</fullName>
    <label>Session Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 minutes</fullName>
            </value>
            <value>
                <fullName>30 minutes</fullName>
            </value>
            <value>
                <fullName>45 minutes</fullName>
            </value>
            <value>
                <fullName>60 minutes</fullName>
            </value>
            <value>
                <fullName>90 minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>