force-app/main/default/objects/Speaker_Submission__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Presentation</fullName>
            </value>
            <value>
                <fullName>Hands-on Workshop</fullName>
            </value>
            <value>
                <fullName>Lightning Talk (15 min)</fullName>
            </value>
            <value>
                <fullName>Demo/Product Showcase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>