force-app/main/default/objects/Speaker_Submission__c/fields/Speaker_Bio__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Bio__c</fullName>
    <label>Speaker Bio</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>