force-app/main/default/objects/Speaker_Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gender__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Session_Title__c</columns>
    <columns>Session_Type__c</columns>
    <columns>Session_Category__c</columns>
    <columns>Session_Duration__c</columns>
    <columns>Status__c</columns>
    <columns>Audience_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>